# NeuronVisualizationGL

./: .gitignore  CMakeLists.txt  README.MD
doc/: Lod.pptx
src/: CMakeLists.txt  NeuronVisGLApplication.cpp  NeuronVisGLApplication.hpp  main.cpp
src/Common/: boundingbox.hpp  camera.hpp  help_cuda.hpp  help_gl.hpp  renderer_config.hpp  utils.hpp
src/Data/: large_volume_manager.cpp  large_volume_manager.hpp  transfer_function.hpp
src/IO/: large_volume_reader.cpp  large_volume_reader.hpp
src/Render/: large_volume_renderer.cpp  large_volume_renderer.hpp  shader_program.hpp  shaders.hpp  shaders.hpp.in
src/Render/shaders/: block_intersect_f.glsl  block_intersect_v.glsl  guide_map_f.glsl  mix_block_raycast_f.glsl  raycast_pos_f.glsl
src/Window/: WindowManager.hpp
test_data/: imgui.ini  renderer_config.json
